# python-exercises

./: .gitignore  CHANGELOG.md  README.md  build.py  derivation.nix  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: nix.yml  release.yml
ex/: 01_basics.pt.md  02_conditionals.pt.md  03_functions.pt.md  04_loops.pt.md  lists.pt.md
static/: style.css
