[tool.poetry]
name = "exercises"
version = "0.1.0"
description = "Simple static site generator for some programming exercises"
authors = ["Rodrigo Gryzinski <rogryza@gmail.com>"]
license = "CC By-SA"

[tool.poetry.dependencies]
python = "^3.8"
markdown = "^3.1.1"
pygments = "^2.7.4"
hyperpython = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
